--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,29 +1,45 @@
 server:
-      port: 8090
-      servlet:
-             contextPath: /services
+  port: 8090
+  servlet:
+    contextPath: /services
 
 jwt:
-   secret: covid19
+  secret: frcs-secret
 
 spring:
-      datasource:
-              driver-class-name: oracle.jdbc.driver.OracleDriver
-              url: jdbc:oracle:thin:@localhost:1521:xe
-              password: neeraj439
-              username: neerajdb
-          
-      data:
-          mongodb:
-                 host: localhost
-                 port: 27017
-                 database: neerajmongodb
-                 
+  datasource:
+    driver-class-name: oracle.jdbc.driver.OracleDriver
+    url: jdbc:oracle:thin:@localhost:1521:xe
+    password: neeraj439
+    username: neerajdb
+  hibernate:
+    hdm2ddl:
+      auto: validate
+  jpa:
+    hibernate:
+      ddl-auto: update
+    show-sql: true
+
+
+
+  data:
+    mongodb:
+      host: localhost
+      port: 27017
+      database: neerajmongodb
+
+  security:
+    #user:
+    password: test123
+
 logging:
-       level:
-            org:
-               springframework:
-                              web:
-                                 servlet:
-                                        DispatcherServlet: debug
+  level:
+    org:
+      springframework:
+        web:
+          servlet:
+            DispatcherServlet: debug
+
+
+
            
